# oxivgl

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  build.rs  run_cores3.sh  run_docs.sh  run_fire27.sh  run_host.sh  run_screenshots.sh  run_tests.sh
.cargo/: config.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
conf/: lv_conf.h
conf/fonts/: lv_font_altreg_rpm.c
docs/: architecture.dot  bug-partial-mode-toast-not-composited.md  change-request-pointer-safety.md  cr-navigator-global-status-overlay.md  cr-navigator-modal-background-tree-residency.md  memory-tuning.md  spec-api-vision.md  spec-example-porting.md  spec-git-workflow.md  spec-memory-lifetime.md  spec-navigation.md  spec-testing.md  spec-widget-wrapper.md
docs/archived/: 2026-03-18-complete-lvgl-encapsulation.md  change-request-lifetime-safety.md  change-request-pointer-safety.md  cr-complete-lvgl-encapsulation.md
docs/archived/plans/: 2026-03-12-lvgl-getting-started-examples.md
docs/archived/superpowers/plans/: 2026-03-13-api-ergonomics.md  2026-03-14-image-asset-pipeline.md  2026-03-15-gradient-examples.md  2026-03-16-style-lifetime-safety.md
docs/archived/superpowers/specs/: 2026-03-15-gradient-examples-design.md
docs/plans/: 2026-03-20-canvas-widget.md  2026-03-21-calendar-widget.md  child-widget-ownership.md  phase3-list-widget.md
docs/superpowers/plans/: 2026-03-13-animation-examples.md
docs/superpowers/specs/: 2026-03-14-image-asset-pipeline-design.md  2026-03-18-complete-lvgl-encapsulation-design.md
examples/: anim1.rs  anim2.rs  anim3.rs  anim4.rs  anim_timeline1.rs  animimg_1.rs  calendar_1.rs  calendar_2.rs  canvas_1.rs  canvas_10.rs  canvas_11.rs  canvas_12.rs  canvas_2.rs  canvas_3.rs  canvas_4.rs  canvas_5.rs  canvas_6.rs  canvas_7.rs  canvas_9.rs  event_bubble.rs  event_button.rs  event_click.rs  event_draw.rs  event_streak.rs  event_trickle.rs  flex1.rs  flex2.rs  flex3.rs  flex4.rs  flex5.rs  flex6.rs  getting_started1.rs  getting_started2.rs  getting_started3.rs  getting_started4.rs  getting_started5.rs  getting_started6.rs  getting_started7.rs  getting_started8.rs  grad_1.rs  (+153 more)
examples/common/: Cargo.toml  build.rs
examples/common/src/: board.rs  fire27.rs  fmt.rs  host.rs  lib.rs
examples/conf/: lv_conf.h
examples/doc/: README.md
examples/fire27/: Cargo.toml  build.rs
examples/fire27/src/: main.rs
examples/get-started/: Cargo.toml  README.md
examples/get-started/screenshots/: ex1.ppm  ex2.ppm  ex3.ppm  ex4.ppm
examples/get-started/src/: lib.rs
examples/get-started/tests/: screenshots.rs
oxivgl-build/: Cargo.toml
oxivgl-build/src/: lib.rs
oxivgl-sys/: Cargo.toml  bindings_docsrs.rs  build.rs
oxivgl-sys/default-conf/: lv_conf.h
oxivgl-sys/shims/: lvgl_sys.c  lvgl_sys.h
oxivgl-sys/src/: lib.rs
src/: diag.rs  display.rs  draw.rs  draw_buf.rs  driver.rs  enums.rs  event.rs  flush_pipeline.rs  fmt.rs  fonts.rs  gridnav.rs  group.rs  indev.rs  layout.rs  lib.rs  lvgl.rs  lvgl_buffers.rs  math.rs  mem.rs  navigator.rs  prelude.rs  render_scratch.rs  snapshot.rs  symbols.rs  timer.rs  translation.rs  view.rs
src/anim/: anim.rs  anim_timeline.rs  mod.rs
src/draw/: area.rs  dsc.rs  layer.rs  task.rs
src/style/: grad.rs  mod.rs  palette.rs  selector.rs  style.rs  theme.rs
src/widgets/: anim.rs  anim_timeline.rs  animimg.rs  arc.rs  arclabel.rs  bar.rs  button.rs  buttonmatrix.rs  calendar.rs  canvas.rs  chart.rs  checkbox.rs  child.rs  dropdown.rs  enums.rs  event.rs  grad.rs  grid.rs  image.rs  imagebutton.rs  keyboard.rs  label.rs  led.rs  line.rs  list.rs  lottie.rs  menu.rs  mod.rs  msgbox.rs  obj.rs  obj_layout.rs  obj_style.rs  palette.rs  prelude.rs  roller.rs  scale.rs  screen.rs  selector.rs  slider.rs  span.rs  (+12 more)
tests/: integration.rs  leak_check.rs  mem_pool.rs
tests/common/: mod.rs
tests/integration/: anim.rs  encoder.rs  keypad.rs  main.rs  navigator_modal.rs  navigator_toast.rs  style.rs  widgets.rs  widgets_display.rs
tools/: README.md  regen-docsrs-bindings.sh
