# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "oxivgl"
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lib]

[features]
default = []
esp-hal = ["dep:esp-hal"]
defmt = ["dep:defmt"]
log-04 = ["dep:log-04"]

[dependencies]
lvgl_rust_sys = { git = "https://github.com/emobotics-dev/lvgl_rust_sys.git", rev = "5cb45972e2ea0f5bcc009e64652f0734f8fd57a1", default-features = false }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
heapless = { version = "0.9.1", features = ["nightly"] }
cfg-if = "1"
thiserror-no-std = "2.0.2"
critical-section = "1"
esp-hal = { git = "https://github.com/emobotics-dev/esp-hal.git", branch = "local", features = ["unstable"], optional = true }
defmt = { version = "1.0.1", optional = true }
log-04 = { package = "log", version = "0.4", optional = true }

[build-dependencies]
cmake = "0.1"
cc = "1.2.38"

[workspace]
members = ["examples/fire27", "examples/get-started"]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = true
