# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "oxivgl"
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lib]

[features]
default = []
esp-hal = ["dep:esp-hal"]
defmt = ["dep:defmt"]
log-04 = ["dep:log-04"]
png = ["dep:png"]

[dependencies]
lvgl_rust_sys = { git = "https://github.com/emobotics-dev/lvgl_rust_sys.git", branch = "local-9.5.0", default-features = false }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
heapless = { version = "0.9.1", features = ["nightly"] }
cfg-if = "1"
thiserror-no-std = "2.0.2"
critical-section = "1"
esp-hal = { git = "https://github.com/emobotics-dev/esp-hal.git", branch = "local", features = ["unstable"], optional = true }
defmt = { version = "1.0.1", optional = true }
log-04 = { package = "log", version = "0.4", optional = true }
png = { version = "0.17", optional = true }

[build-dependencies]
oxivgl-build = { path = "oxivgl-build" }

[workspace]
exclude = ["examples/common", "oxivgl-build"]

[dev-dependencies]
oxivgl-examples-common = { path = "examples/common" }
lvgl_rust_sys = { git = "https://github.com/emobotics-dev/lvgl_rust_sys.git", branch = "local-9.5.0", default-features = false }

# Proc-macro crates needed by fire27_main! attribute/macro expansion on xtensa
[target.'cfg(target_arch = "xtensa")'.dev-dependencies]
embassy-executor       = { version = "0.9.1", features = ["nightly"] }
esp-bootloader-esp-idf = { git = "https://github.com/emobotics-dev/esp-hal.git", branch = "local", features = ["esp32"] }
esp-hal                = { git = "https://github.com/emobotics-dev/esp-hal.git", branch = "local", features = ["esp32", "unstable"] }
esp-rtos               = { git = "https://github.com/emobotics-dev/esp-hal.git", branch = "local", features = ["esp32", "embassy"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = true
