# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "oxivgl"
edition = "2024"
version = "0.6.0"
license = "MIT OR Apache-2.0"
description = "Safe no_std Rust bindings for LVGL — embedded GUI on ESP32 and host SDL2"
repository = "https://github.com/emobotics-dev/oxivgl"
homepage = "https://github.com/emobotics-dev/oxivgl"
documentation = "https://docs.rs/oxivgl"
readme = "README.md"
keywords = ["lvgl", "embedded-gui", "esp32", "no-std", "ui"]
authors = ["emobotics-dev"]
categories = ["embedded", "no-std", "gui"]
exclude = [
    ".devcontainer/",
    ".github/",
    "CLAUDE.md",
    "docs/",
    "examples/doc/screenshots/",
    "examples/common/",
    "run_*.sh",
    "RELEASE_NOTES_*.md",
]

[package.metadata.docs.rs]
features = ["log-04", "png"]
targets = ["x86_64-unknown-linux-gnu"]
no-default-features = true

[lib]

[features]
default = []
esp-hal = ["dep:esp-hal"]
esp32 = ["esp-hal/esp32"]
esp32s3 = ["esp-hal/esp32s3"]
defmt = ["dep:defmt"]
log-04 = ["dep:log-04"]
png = ["dep:png"]

# Board selection for the examples (built with `cargo --example`). Each forwards
# the chip to the library (esp32/esp32s3) and to the example harness crate, which
# in turn drives the m5stack-core BSP's board feature. Exactly one may be active;
# `fire27` is the default the run scripts and CI use when none is passed.
fire27 = [
    "esp-hal", "esp32", "oxivgl-examples-common/fire27",
    "esp-rtos/esp32", "esp-bootloader-esp-idf/esp32", "esp-sync/esp32",
    "m5stack-core/fire27",
]
cores3 = [
    "esp-hal", "esp32s3", "oxivgl-examples-common/cores3",
    "esp-rtos/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-sync/esp32s3",
    "m5stack-core/cores3",
]

[dependencies]
oxivgl_sys = { package = "oxivgl-sys", version = "0.2.3", path = "oxivgl-sys", default-features = false }
embassy-sync = "0.8"
embassy-time = "0.5.0"
heapless = { version = "0.9.1", features = ["nightly"] }
cfg-if = "1"
thiserror-no-std = "2.0.2"
critical-section = "1"
esp-hal = { version = "1.1.0", features = ["unstable"], optional = true }
defmt = { version = "1.0.1", optional = true }
log-04 = { package = "log", version = "0.4", optional = true }
png = { version = "0.17", optional = true }

[build-dependencies]
oxivgl-build = { version = "0.1.0", path = "oxivgl-build" }

[workspace]
exclude = ["examples/common", "oxivgl-build", "oxivgl-sys"]

[dev-dependencies]
oxivgl-examples-common = { path = "examples/common" }
oxivgl_sys = { package = "oxivgl-sys", version = "0.2.3", path = "oxivgl-sys", default-features = false }

# Crates the example harness names directly on xtensa (attribute macros +
# BSP entry points). Chip features are supplied by the active board feature
# (`fire27`/`cores3`) above, never hardcoded, so both boards share these lines.
[target.'cfg(target_arch = "xtensa")'.dev-dependencies]
embassy-executor       = { version = "0.10.0", features = ["nightly"] }
esp-bootloader-esp-idf = { version = "0.5.0" }
esp-hal                = { version = "=1.1.1", features = ["unstable"] }
esp-rtos               = { version = "0.3.0", features = ["embassy"] }
esp-sync               = { version = "0.2.1" }
m5stack-core = { git = "https://github.com/emobotics-dev/m5stack-core", tag = "v0.4.1", default-features = false, features = ["display", "psram", "console-serial", "panic-handler"] }

# esp-hal family — stock crates.io for the published library; redirected to the
# emobotics fork (a coherent 1.1.1 snapshot + SPI/DMA fixes the BSP's DMA flush
# needs) for local + CI + example builds. `cargo publish` ignores [patch], so
# downstream consumers of the library still resolve stock crates.io. See #119.
[patch.crates-io]
esp-hal                = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }
esp-radio              = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }
esp-sync               = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }
esp-alloc              = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }
esp-rom-sys            = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }
esp-bootloader-esp-idf = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }
esp-rtos               = { git = "https://github.com/emobotics-dev/esp-hal.git", rev = "b7a4c74a024383cb9808453cf3e34296c5e870b0" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = true

# Zero-warnings policy: any rustc warning is a hard build error (local + CI,
# host + xtensa). Equivalent to `-D warnings`, scoped to this crate's own code.
[lints.rust]
warnings = "deny"
