# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "oxivgl-build"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Build-time helpers for oxivgl (LVGL image asset conversion)"
repository = "https://github.com/emobotics-dev/oxivgl"
keywords = ["lvgl", "build-tools", "embedded-gui"]
categories = ["development-tools::build-utils"]

[dependencies]
cc = "1"

[workspace]
